@@ -40,6 +40,8 @@ Version 1.3.16+svn:
    * Fix flickering hp/xp bars of ghost and other invisible units.
    * Placement of random terrain images is more random.
    * Optimization of damage floating labels
+   * Fix update of the minimap and starting positions when using the "delay
+     transitions update" option.
    
 Version 1.3.16:
  * campaigns:
